# NotEvolve

./: .gitignore  AGENT.md  README.md  intern-1-findings-final.md  intern-1-findings.md  intern-2-findings-final.md  intern-2-findings.md  pyproject.toml
examples/beat_the_average_game/: README.md  config.json  evaluator.py  evaluator_adapter.py  run.sh
notebook_agent/: __init__.py  __main__.py  cli.py  config.py  session.py
notebook_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
notebook_agent/context/: renderer.py
notebook_agent/engine/: human_llm.py  llm_interface.py
notebook_agent/kernel/: executor.py  manager.py
notebook_agent/models/: __init__.py  cell.py  notebook.py
notebook_agent/notebook_ops/: manager.py  staleness.py
notebook_agent/orchestrators/: campaign.py
notebook_agent/persistence/: checkpoint.py  store.py
notebook_agent/security/: policy.py
notebook_agent/tools/: base.py  context_tools.py  evaluator_tools.py  file_tools.py  notebook_tools.py  registry.py
tests/: conftest.py  test_context.py  test_human_llm.py  test_kernel.py  test_llm_interface.py  test_models.py  test_persistence.py  test_security.py  test_staleness.py  test_tools.py
