[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-agent"
version = "0.1.0"
description = "Training-free scaffolding for agentic LLMs working in notebook-style environments"
requires-python = ">=3.11"
dependencies = [
    "jupyter_client>=8.0",
    "nbformat>=5.0",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "click>=8.0",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
notebook-agent = "notebook_agent.cli:main"

[tool.setuptools.packages.find]
include = ["notebook_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
